# opengl-test

./: .clang-format  CMakeLists.txt  compile.sh  run_debug.sh
.cache/clangd/index/: gl.c.8151B4A25E1CB287.idx  glfw3.h.CB3F1BEBDFD7878A.idx  khrplatform.h.92AB1E45035F0618.idx  main.cpp.B3DBFFDAF29FBE55.idx  shader.cpp.3ECBD48E1A651717.idx  shader.hpp.734745DC33AD6463.idx  stb.cpp.6F7BCB1AEF906501.idx  stb_image.h.4CD3CE9108A94011.idx
include/glad/: gl.h
src/: main.cpp  shader.cpp  shader.hpp
src/data/shader/: cvertices.vert  inverted_shader.vert  rainbow_v.frag  rainbow_v.vert  shader1.frag  shader1.vert  texture.frag  texture.vert  xoffset_shader.vert
